--- a/Lab1/report/main.tex
+++ b/Lab1/report/main.tex
@@ -82,17 +82,25 @@ Department of Software and Automation Engineering} \\[2cm]
 \rhead{\thepage}
 \lhead{FAF-233 Postoronca Dumitru ; Laboratory Work №1}
 
-\section{Domain analysis}
+\include{sections/Purpose.tex}
 
 \clearpage
-\section{Projection}
+\include{sections/DomainAnalysis.tex}
 
 \clearpage
-\section{Results}
+\include{sections/Design.tex}
 
 \clearpage
-\section{Conclusions}
+\include{sections/Results.tex}
 
+\clearpage
+\include{sections/Conclusions.tex}
+
+
+\clearpage
+\include{sections/Bibliography.tex}
+
+\include{sections/Appendix.tex}
 \end{document}
 
 % Image display sample
@@ -102,8 +110,13 @@ Department of Software and Automation Engineering} \\[2cm]
 %     \caption{Circuit for Task 10E}
 %     \label{fig:label}
 % \end{figure}
+% text \ref{fig:label}
 
 % code insertion sample
 % \begin{verbatim}
 % \end{verbatim}
+
+% code insertion sample - with highlighting
+% \begin{lstlisting}
+% \end{lstlisting}
 
