--- a/LabSetup/report/main.tex
+++ b/LabSetup/report/main.tex
@@ -82,8 +82,7 @@ Department of Software and Automation Engineering} \\[2cm]
 \rhead{\thepage}
 \lhead{FAF-233 Postoronca Dumitru ; Laboratory Work №1}
 
-\section{Domain analysis}
-
+\include{sections/DomainAnalysis.tex}
 \clearpage
 \section{Projection}
 
